--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "formik": "^2.2.9",
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
+    "react-alert": "^7.0.3",
+    "react-alert-template-basic": "^1.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
