feat: add husky no server

--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "npx eslint .",
-    "pre-commit": "npm run lint"
+    "pre-commit": "npm run lint && cd ../server && npm run test"
   },
   "eslintConfig": {
     "extends": [
