--- a/server/package.json
+++ b/server/package.json
@@ -17,14 +17,21 @@
   "devDependencies": {
     "jest": "^27.0.4",
     "nodemon": "^2.0.7",
-    "supertest": "^6.1.3"
+    "supertest": "^6.1.3",
+    "husky": "^1.0.0-rc.13"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run pre-commit"
+    }
   },
   "scripts": {
     "start-dev": "nodemon src/server.js --ignore __tests__",
     "recreate_db": "npx knex migrate:rollback --all && npx knex migrate:latest",
     "seed_db": "npx knex seed:run",
     "pretest": "NODE_MODE=test npm run recreate_db && NODE_MODE=test npm run seed_db",
-    "test": "NODE_MODE=test jest --forceExit"
+    "test": "NODE_MODE=test jest --forceExit",
+    "pre-commit": "npm run test && cd ../client && npm run lint "
   },
   "keywords": [],
   "author": "",
